--- a/style.css
+++ b/style.css
@@ -289,8 +289,152 @@ body {
   background-color: var(--softBlue);
 }
 
+.yellow-bg{
+  background-color: var(--softYellow);
+}
+
+.red-bg{
+  background-color: var(--softRed);
+}
+
+.purple-bg{
+  background-color: var(--softPurple);
+}
+
+.detail{
+  width: 25%;
+  min-width: 250px;
+  height: 100%;
+  padding: 2rem;
+  position: fixed;
+  right: 0;
+  background-color: var(--whiteColor);
+  overflow: auto;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+/* will show close button on mobile view */
+.close-detail{
+  display: none;
+}
+
+.detail-header{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.detail-header img{
+  width: 50px;
+  height: 50px;
+}
+
+.divider{
+  width: 100%;
+  height: 1px;
+  background-color: var(--greyColor);
+  border: none;
+  margin: 1rem 0;
+}
+
+.detail-desc{
+  line-height: 1.5;
+}
+
+.about a{
+  margin: 0.5rem 0 0 0;
+  color: var(--primaryColor);
+  font-size: 14px;
+  text-decoration: none;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.detail-btn{
+  display: flex;
+  gap: 1rem;
+  margin: 1rem 0;
+}
+
+.btn-apply{
+  background-color: var(--primaryColor);
+  color: var(--whiteColor);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.btn-apply:hover{
+  border: 1px solid var(--primaryColor);
+  background-color: transparent;
+  color: var(--primaryColor);
+}
+
+.btn-save{
+  background-color: var(--secondaryColor);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.btn-save:hover{
+  border: 1px solid var(--secondaryColor);
+  background-color: transparent;
+}
+
+.sidebar.active{
+  display: flex;
+  width: 220px;
+  z-index: 100;
+}
+
+@media screen and (max-width:880px) {
+  .menu-bar{
+    display: block;
+  }
+
+  .sidebar{
+    display: none;
+  }
+
+  .main{
+    width: calc(100% - 40%);
+    margin-left: 0;
+  }
+
+  .detail{
+    width: 40%;
+  }
+}
+
+@media screen and (max-width:700px) {
+  .main{
+    width: 100%;
+  }
+
+  .detail{
+    display: none;
+  }
+
+  .detail.active{
+    display: block;
+    width: 100%;
+    z-index: 100;
+  }
+
+  .detail.active .close-detail{
+    display: block;
+    cursor: pointer;
+  }
+}
 
 
-
+@media screen and (max-width:480px){
+  .card-loc, .card-sub, .card-tag{
+    display: none;
+  }
+}
 
 /* baru nonton sampe menit ke 14.12*/
