--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body {
   padding: 2rem 2%;
   margin-left: 20%;
   background-color: var(--softPurple);
-  z-index: 1
+  z-index: 1;
 }
 
 .main-header {
@@ -113,14 +113,14 @@ body {
 }
 
 /* will hide menu bar for dekstop view, show later on mobile view */
-.menu-bar{
+.menu-bar {
   background-color: var(--whiteColor);
   padding: 0.5rem;
   border-radius: 20px;
   display: none;
 }
 
-.search{
+.search {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -137,7 +137,7 @@ body {
   border: none;
 }
 
-.btn-search{
+.btn-search {
   position: absolute;
   right: 0;
   top: 0;
@@ -152,24 +152,24 @@ body {
   cursor: pointer;
 }
 
-.btn-search:hover{
+.btn-search:hover {
   background-color: var(--secondaryColor);
   color: var(--fontColor);
 }
 
-.filter-wrapper{
+.filter-wrapper {
   margin: 1rem 0;
   font-size: 14px;
 }
 
-.filter{
+.filter {
   display: flex;
   gap: 1rem;
   overflow-x: auto;
   margin: 0.5rem 0;
 }
 
-.btn-filter{
+.btn-filter {
   min-width: 110px;
   padding: 0.5rem;
   border-radius: 20px;
@@ -178,13 +178,13 @@ body {
   cursor: pointer;
 }
 
-.btn-filter:hover{
+.btn-filter:hover {
   background-color: var(--primaryColor);
   color: var(--whiteColor);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-.sort{
+.sort {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -195,14 +195,14 @@ body {
   font-size: 14px;
 }
 
-.sort-list select{
+.sort-list select {
   height: 1.5rem;
   border-radius: 20px;
   border: none;
   margin-top: 0 0.5rem;
 }
 
-.wrapper{
+.wrapper {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -211,7 +211,7 @@ body {
   overflow: auto;
 }
 
-.card{
+.card {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -226,11 +226,11 @@ body {
   cursor: pointer;
 }
 
-.card:hover{
+.card:hover {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-.card-left{
+.card-left {
   width: 10%;
   min-width: 50px;
   display: flex;
@@ -238,35 +238,35 @@ body {
   border-radius: 20%;
 }
 
-.card-left img{
+.card-left img {
   width: 100%;
   height: auto;
   min-height: 50px;
   padding: 1rem;
 }
 
-.card-center{
+.card-center {
   width: 50%;
 }
 
-.card-loc, .card-sub{
+.card-loc,
+.card-sub {
   font-size: 13px;
   color: var(--darkGreyColor);
 }
 
-.card-sub{
+.card-sub {
   display: flex;
   flex-wrap: wrap;
-  
 }
 
-.card-sub p{
+.card-sub p {
   display: flex;
   padding: 0 0.5rem 0 0;
   align-items: center;
 }
 
-.card-right{
+.card-right {
   width: 15%;
 }
 
@@ -275,33 +275,33 @@ body {
   font-size: 13px;
 }
 
-.card-salary{
+.card-salary {
   padding: 0.5rem 0;
   color: var(--primaryColor);
 }
 
-.card-salary span{
+.card-salary span {
   color: var(--fontColor);
   font-size: 13px;
 }
 
-.blue-bg{
+.blue-bg {
   background-color: var(--softBlue);
 }
 
-.yellow-bg{
+.yellow-bg {
   background-color: var(--softYellow);
 }
 
-.red-bg{
+.red-bg {
   background-color: var(--softRed);
 }
 
-.purple-bg{
+.purple-bg {
   background-color: var(--softPurple);
 }
 
-.detail{
+.detail {
   width: 25%;
   min-width: 250px;
   height: 100%;
@@ -314,22 +314,22 @@ body {
 }
 
 /* will show close button on mobile view */
-.close-detail{
+.close-detail {
   display: none;
 }
 
-.detail-header{
+.detail-header {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.detail-header img{
+.detail-header img {
   width: 50px;
   height: 50px;
 }
 
-.divider{
+.divider {
   width: 100%;
   height: 1px;
   background-color: var(--greyColor);
@@ -337,11 +337,11 @@ body {
   margin: 1rem 0;
 }
 
-.detail-desc{
+.detail-desc {
   line-height: 1.5;
 }
 
-.about a{
+.about a {
   margin: 0.5rem 0 0 0;
   color: var(--primaryColor);
   font-size: 14px;
@@ -350,13 +350,13 @@ body {
   cursor: pointer;
 }
 
-.detail-btn{
+.detail-btn {
   display: flex;
   gap: 1rem;
   margin: 1rem 0;
 }
 
-.btn-apply{
+.btn-apply {
   background-color: var(--primaryColor);
   color: var(--whiteColor);
   border: none;
@@ -365,13 +365,13 @@ body {
   cursor: pointer;
 }
 
-.btn-apply:hover{
+.btn-apply:hover {
   border: 1px solid var(--primaryColor);
   background-color: transparent;
   color: var(--primaryColor);
 }
 
-.btn-save{
+.btn-save {
   background-color: var(--secondaryColor);
   border: none;
   padding: 10px 20px;
@@ -379,62 +379,68 @@ body {
   cursor: pointer;
 }
 
-.btn-save:hover{
+.btn-save:hover {
   border: 1px solid var(--secondaryColor);
   background-color: transparent;
 }
 
-.sidebar.active{
+.sidebar.active {
   display: flex;
   width: 220px;
   z-index: 100;
 }
 
-@media screen and (max-width:880px) {
-  .menu-bar{
+@media screen and (max-width: 880px) {
+  .menu-bar {
     display: block;
   }
 
-  .sidebar{
+  .sidebar {
     display: none;
   }
 
-  .main{
+  .main {
     width: calc(100% - 40%);
     margin-left: 0;
   }
 
-  .detail{
+  .detail {
     width: 40%;
   }
 }
 
-@media screen and (max-width:700px) {
-  .main{
+@media screen and (max-width: 700px) {
+  .main {
     width: 100%;
   }
 
-  .detail{
+  .detail {
     display: none;
   }
 
-  .detail.active{
+  .detail.active {
     display: block;
     width: 100%;
     z-index: 100;
   }
 
-  .detail.active .close-detail{
+  .detail.active .close-detail {
     display: block;
     cursor: pointer;
   }
 }
 
-
-@media screen and (max-width:480px){
-  .card-loc, .card-sub, .card-tag{
+@media screen and (max-width: 480px) {
+  .card-loc,
+  .card-sub,
+  .card-tag {
     display: none;
   }
+}
+
+a {
+  color: inherit; /* menggunakan warna default dari parent element */
+  text-decoration: none; /* menghilangkan underline */
 }
 
 /* baru nonton sampe menit ke 14.12*/
