--- a/style.css
+++ b/style.css
@@ -237,6 +237,52 @@ body {
   margin: 0 auto;
 }
 
+.rowprofile{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  padding: 1rem 0;
+  gap: 1rem;
+  overflow: auto;
+  
+}
+
+.rowprofile form{
+  border: none;
+  padding: 1.5rem 1rem;
+}
+
+
+
+.inputBox{
+  padding: 3%;
+  margin: 0 1%;
+  gap: 2rem;
+}
+
+.inputBox input{
+  border: none;
+  background-color: transparent;
+  font-size: 20px;
+}
+
+.btn-input{
+  background-color: var(--primaryColor);
+  color: var(--whiteColor);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+  margin: 0 1%;
+}
+
+.btn-input:hover{
+  border: 1px solid var(--primaryColor);
+  background-color: transparent;
+  color: var(--primaryColor);
+}
+
+
 .card {
   display: flex;
   flex-wrap: wrap;
