--- a/about.css
+++ b/about.css
@@ -217,6 +217,25 @@
   display: none;
 }
 
+@media screen and (max-width: 880px) {
+  .menu-bar {
+    display: block;
+  }
+
+  .sidebar {
+    display: none;
+  }
+
+  .main {
+    width: calc(100% - 40%);
+    margin-left: 0;
+  }
+
+  .detail {
+    width: 40%;
+  }
+}
+
 @media (max-width: 768px) {
   .beranda {
     width: 100%;
@@ -228,8 +247,6 @@
     width: 0;
     background-color: #f9dff2;
   }
-
-
 
   .sidebar {
     display: none;
